# stiuniverse

./: .gitignore  .pymake  CMakeLists.txt  README.md  build.py  build_assets.py  build_release.py  copy_bin.py  doxy_stigame.py  doxy_todo.txt  engine_copy.py  log.css  make.py  packer.py  retrieve_extern.py  stiuniverse.workspace  test.py  to do.txt
StiGame/: ActionBind.cpp  ActionBind.h  ActionBinding.cpp  ActionBinding.h  ActionMap.cpp  ActionMap.h  BaseGameState.cpp  BaseGameState.h  CompActionMap.cpp  CompActionMap.h  Computer.cpp  Computer.h  Cursor.cpp  Cursor.h  DefaultResolver.cpp  DefaultResolver.h  FieldResolver.h  IntField.cpp  IntField.h  KeyActionMap.cpp  KeyActionMap.h  KeyBind.cpp  Logger.cpp  MouseActionMap.cpp  MouseActionMap.h  MouseButtonEvent.cpp  MouseButtonEvent.h  MouseEventListener.cpp  MouseEventListener.h  MouseEventThrower.cpp  MouseEventThrower.h  ObjectField.cpp  ObjectField.h  PCircle.cpp  PRect.cpp  Rectangle.cpp  Rectangle.h  StiGame.cbp  StringField.cpp  StringField.h  (+9 more)
StiUniverse/: AssetGenerator.cpp  BigOrangeMissile.cpp  BigOrangeMissile.h  CMakeLists.txt  GameActionFactory.cpp  GameOverlay.cpp  GameOverlay.h  GreenMissile.cpp  MainMenuState.cpp  MainMenuState.h  MainState.cpp  MissileFactory.cpp  MissileFactory.h  MissileThrower.h  OptionMenuState.cpp  OptionMenuState.h  RedMissile.cpp  SpaceHud.cpp  SpaceObject.cpp  SpaceObject.h  SpaceVessel.cpp  StiUniverse.cbp  String.h  UDefinition.cpp  UDefinition.h  UObject.cpp  UObject.h  main.cpp
assets/: gui.var
assettools/: AssetGenerator.cpp  AssetGenerator.h  assettools.cbp  main.cpp
(+187 files in other folders)
